@@ -1,3 +1,8 @@
+2004-08-10  Edd Dumbill <edd@usefulinc.com>
+
+	* src/connection.c: add comments for some printf strings to
+	help translators.  Addresses #149677
+
 2004-08-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.
